--- a/Delta Task 2/index.css
+++ b/Delta Task 2/index.css
@@ -1,21 +1,16 @@
-div {
-    width: 100px;
-    height: 100px;
-    background-color: red;
+#canvas {
     border-style: solid;
     border-radius: 10px;
     border-width: 3px;
-    border-color: blue;
-    color: white;
-    font-size: 60px;
-    text-align: center;
+    border-color: black;
 }
 
 
-#gameArea {
-    width: 100%;
-    height: 525px;
-    border-style: solid;
-    border-width: 2px;
-    border-color: black;
+#p01 {
+    font-style: italic;
+    font-size: 50px;
+    position: fixed;
+    top: 400px;
+    left: 500px;
+    color: red;
 }
